--- a/app/design/frontend/oc-theme/mobile/template/cms/cat_list.phtml
+++ b/app/design/frontend/oc-theme/mobile/template/cms/cat_list.phtml
@@ -3,28 +3,19 @@ $mediaDir = Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB, true) . 'media
 $themeDirection = Mage::getStoreConfig('webthemeoptions/general/appthemedir');
 //Categories Block
 $showCats = Mage::getStoreConfig('webthemeoptions/homecats/enable');
-//first cat
-$cat1banner = Mage::getStoreConfig('webthemeoptions/homecats/cat1banner');
-$cat1icon = Mage::getStoreConfig('webthemeoptions/homecats/cat1icon');
-$cat1text = Mage::getStoreConfig('webthemeoptions/homecats/cat1text');
-$cat1sub = Mage::getStoreConfig('webthemeoptions/homecats/cat1sub');
-$cat1link = Mage::getStoreConfig('webthemeoptions/homecats/cat1link');
-//second cat
-$cat2banner = Mage::getStoreConfig('webthemeoptions/homecats/cat2banner');
-$cat2icon = Mage::getStoreConfig('webthemeoptions/homecats/cat2icon');
-$cat2text = Mage::getStoreConfig('webthemeoptions/homecats/cat2text');
-$cat2sub = Mage::getStoreConfig('webthemeoptions/homecats/cat2sub');
-$cat2link = Mage::getStoreConfig('webthemeoptions/homecats/cat2link');
-//third cat
-$cat3banner = Mage::getStoreConfig('webthemeoptions/homecats/cat3banner');
-$cat3icon = Mage::getStoreConfig('webthemeoptions/homecats/cat3icon');
-$cat3text = Mage::getStoreConfig('webthemeoptions/homecats/cat3text');
-$cat3sub = Mage::getStoreConfig('webthemeoptions/homecats/cat3sub');
-$cat3link = Mage::getStoreConfig('webthemeoptions/homecats/cat3link');
+//recipes
+$showRe = Mage::getStoreConfig('webthemeoptions/homere/enable');
+//about
+$homeabout = Mage::getStoreConfig('webthemeoptions/homeabout/enable');
+$aboutTitle = Mage::getStoreConfig('webthemeoptions/homeabout/titletext');
+$aboutText = Mage::getStoreConfig('webthemeoptions/homeabout/text');
+$aboutLink = Mage::getStoreConfig('webthemeoptions/homeabout/link');
+$aboutBanner = Mage::getStoreConfig('webthemeoptions/homeabout/banner');
 //How works Block
 $showHowWorks = Mage::getStoreConfig('webthemeoptions/howworks/enable');
 $Workstitleimg = Mage::getStoreConfig('webthemeoptions/howworks/titleimg');
 $Workstitletext = Mage::getStoreConfig('webthemeoptions/howworks/titletext');
+$titletextsub = Mage::getStoreConfig('webthemeoptions/howworks/titletextsub');
 //first
 $works1banner = Mage::getStoreConfig('webthemeoptions/howworks/works1banner');
 $works1text = Mage::getStoreConfig('webthemeoptions/howworks/works1text');
@@ -41,16 +32,6 @@ $works3sub = Mage::getStoreConfig('webthemeoptions/howworks/works3sub');
 $works4banner = Mage::getStoreConfig('webthemeoptions/howworks/works4banner');
 $works4text = Mage::getStoreConfig('webthemeoptions/howworks/works4text');
 $works4sub = Mage::getStoreConfig('webthemeoptions/howworks/works4sub');
-//check if products block
-$showProds = Mage::getStoreConfig('webthemeoptions/homeprods/enable');
-$homecatid = Mage::getStoreConfig('webthemeoptions/homeprods/homecatid');
-$titletext = Mage::getStoreConfig('webthemeoptions/homeprods/titletext');
-$titleimg = Mage::getStoreConfig('webthemeoptions/homeprods/titleimg');
-$products = Mage::getModel('catalog/category')->load($homecatid)
- ->getProductCollection()
- ->addAttributeToSelect('*')
- ->addAttributeToFilter('status', 1)
- ->addAttributeToFilter('visibility', 4);
 //blog
 $showBlog = Mage::getStoreConfig('webthemeoptions/blog/enable');
 //get customer and load wishlist
@@ -68,126 +49,39 @@ if (isset($customerId) && $customerId) {
 <?php if($showCats): ?>
 	<div class="home-block home-cats">
 		<div class="container">
-			<div class="row">
-				<div class="item col-md-12">
-					<div class="block">
-						<div class="banner">
-							<img src="<?php echo $mediaDir . $cat1banner; ?>" alt="<?php echo $cat1text ?>" />
-						</div>
-						<div class="text">
-							<img src="<?php echo $mediaDir . $cat1icon; ?>" alt="<?php echo $cat1text ?>" />
-							<h3><?php echo $cat1text ?></h3>
-							<div class="subTitle"><?php echo $cat1sub ?></div>
-							<div class="link"><a href="<?php echo $cat1link ?>"><?php echo $this->__('Watch products'); ?> >></a></div>
-						</div>
-					</div>
-				</div>
-				<div class="item col-md-12">
-					<div class="block">
-						<div class="banner">
-							<img src="<?php echo $mediaDir . $cat2banner; ?>" alt="<?php echo $cat2text ?>" />
-						</div>
-						<div class="text">
-							<img src="<?php echo $mediaDir . $cat2icon; ?>" alt="<?php echo $cat2text ?>" />
-							<h3><?php echo $cat2text ?></h3>
-							<div class="subTitle"><?php echo $cat2sub ?></div>
-							<div class="link"><a href="<?php echo $cat2link ?>"><?php echo $this->__('Watch products'); ?> >></a></div>
-						</div>						
-					</div>
-				</div>
-				<div class="item col-md-12">
-					<div class="block">
-						<div class="banner">
-							<img src="<?php echo $mediaDir . $cat3banner; ?>" alt="<?php echo $cat3text ?>" />
-						</div>
-						<div class="text">
-							<img src="<?php echo $mediaDir . $cat3icon; ?>" alt="<?php echo $cat3text ?>" />
-							<h3><?php echo $cat3text ?></h3>
-							<div class="subTitle"><?php echo $cat3sub ?></div>
-							<div class="link"><a href="<?php echo $cat3link ?>"><?php echo $this->__('Watch products'); ?> >></a></div>
-						</div>						
-					</div>
-				</div>
-			</div>
+			<?php echo $this->getChildHtml('cats-homepage'); ?>	
 		</div>
 	</div>
 <?php endif; ?>
-<?php if($showProds): ?>
-	<div class="home-block home-prods">
+<?php if($showRe): ?>
+	<div class="home-block home-cats home-re">
 		<div class="container">
-			<div class="title">
-				<?php if($titleimg): ?>
-					<img src="<?php echo $mediaDir . $titleimg; ?>" alt="<?php echo $titletext ?>" />
-				<?php else: ?>
-					<h3><?php echo $titletext; ?></h3>
-				<?php endif; ?>
-			</div>
-			<div class="home-block sale-block container-products product-grid">
-				<div class="slick-carousel">
-					<?php $i=0; foreach ($products as $_product): $i++;  ?>
-						<div class="item">
-							<div class="product-image-basket">
-								<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>" class="product-image">
-									<img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(300,400); ?>" alt="<?php echo $this->htmlEscape($_product->getName()) ?>" />
-								</a>
-							<div class="cart-block">
-								<?php if($_product->isSaleable()): ?>
-									<a href="javascript:void(0);" data-href="<?php echo $this->getUrl('ajax/product/view/id/' . $_product->getId()) ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>" class="ajax quick-view"><?php echo $this->__('Add to Cart') ?> >></a>
-								<?php endif; ?>
-									<span class="hidden wishlistSubmitUrl"><?php echo $this->helper('wishlist')->getAddUrl($_product); ?></span>
-									<span class="hidden productId"><?php echo $_product->getId(); ?></span>						
-									<ul class="add-to-links">
-										<?php
-										$hasProduct = false;
-										if (isset($customerId) && isset($wishlist) && $customerId) {
-											$collection = Mage::getModel('wishlist/item')->getCollection()
-													->addFieldToFilter('wishlist_id', $wishlist->getId())
-													->addFieldToFilter('product_id', $_product->getId());
-											$hasProduct = ($collection->count() ? true : false);
-										}
-										$_wishlistItem = Mage::getModel('wishlist/item')->loadByProductWishlist(
-												$this->helper('wishlist')->getWishlist()->getId(), $_product->getId(), $_product->getStoreId()
-										);
-										?>
-										<?php if ($hasProduct): ?>
-											<li id="item-<?php echo $_product->getId(); ?>" class="in-wishlist"><a href="<?php echo $this->helper('wishlist')->getRemoveUrl($_wishlistItem); ?>" title="<?php echo $this->__('WHISHLIST') ?>" class="link-wishlist wishItem-<?php echo $_product->getId(); ?>">&nbsp;</a></li>
-										<?php else: ?>
-											<li id="item-<?php echo $_product->getId(); ?>"><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" title="<?php echo $this->__('WHISHLIST') ?>" class="link-wishlist wishItem-<?php echo $_product->getId(); ?>">&nbsp;</a></li>
-										<?php endif; ?>
-									</ul>								
-							</div>
-							</div>	
-							<div class="name-price">
-								<p class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>"><?php echo $_product->getName(); ?></a></p>
-								<div><?php echo $this->getPriceHtml($_product, true) ?></div>
-							</div>							
-						</div>					
-					<?php endforeach; ?>
-				</div>		
-			</div>	
+			<?php echo $this->getChildHtml('recipes-homepage'); ?>	
 		</div>
 	</div>
-	<script type="text/javascript">
-	$j( document ).ready(function() {
-		$j(".slick-carousel").slick({
-			centerMode: true,
-			centerPadding: '50px',
-			slidesToShow: 1,
-			rtl: true,
-			arrows: false
-		});	
-	});
-	</script>
+<?php endif; ?>
+<?php if($homeabout): ?>
+	<div class="home-block homeabout home-cats">
+		<div class="container">
+			<div class="row">				
+				<div class="item col-md-12 col-xs-12 about-text">
+					<h3><?php echo $aboutTitle; ?></h3>
+					<p>
+						<?php echo $aboutText; ?>
+						<a href="<?php echo $aboutLink; ?>"><?php echo $this->__('Read More'); ?> >></a>
+					</p>
+				</div>
+				<div class="item img col-md-12 col-xs-12"><img src="<?php echo $mediaDir . $aboutBanner; ?>" alt="<?php echo $aboutTitle ?>" /></div>				
+			</div>
+		</div>
+	</div>
 <?php endif; ?>
 <?php if($showHowWorks): ?>
 	<div class="home-block how-works">
 		<div class="container">
 			<div class="title">
-				<?php if($Workstitleimg): ?>
-					<img src="<?php echo $mediaDir . $Workstitleimg; ?>" alt="<?php echo $Workstitletext ?>" />
-				<?php else: ?>
-					<h3><?php echo $Workstitletext; ?></h3>
-				<?php endif; ?>
+				<h3><?php echo $Workstitletext; ?></h3>
+				<p><?php echo $titletextsub; ?></p>
 			</div>		
 			<div class="row">
 				<div class="item col-md-3 col-xs-6 first">
@@ -237,16 +131,6 @@ if (isset($customerId) && $customerId) {
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript">
-	$j( document ).ready(function() {
-		$j(".how-works .row").slick({
-			centerMode: false,
-			centerPadding: '50px',
-			rtl: true,
-			arrows: true
-		});	
-	});
-	</script>	
 <?php endif; ?>
 <?php if($showBlog): ?>
 	<?php echo $this->getChildHtml('blog-homepage'); ?>	
