--- a/skin/frontend/oc-theme/default/magentothem/fancybox/jquery.fancybox.css
+++ b/skin/frontend/oc-theme/default/magentothem/fancybox/jquery.fancybox.css
@@ -93,7 +93,7 @@
 .fancybox-close {
     position: absolute;
     top: 10px;
-    right: 10px;
+    left: 10px;
     width: 26px;
     height: 23px;
     cursor: pointer;
