--- a/app/design/frontend/oc-theme/default/template/opc/onepage/billing.phtml
+++ b/app/design/frontend/oc-theme/default/template/opc/onepage/billing.phtml
@@ -37,7 +37,7 @@
 								<input type="text" name="billing[email]" id="billing:email" value="<?php echo $this->escapeHtml($this->getAddress()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
 							</div>
 						</div>        
-						<div class="field">
+						<div class="field telephone">
 							<label for="billing:telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
 							<div class="input-box">
 								<input type="text" name="billing[telephone]" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text <?php echo $this->helper('opc')->getAttributeValidationClass('telephone') ?>" id="billing:telephone" />
