--- a/skin/frontend/oc-theme/default/css/styles-ltr.css
+++ b/skin/frontend/oc-theme/default/css/styles-ltr.css
@@ -3,7 +3,7 @@ body {margin: 0;text-align:left;direction: ltr;}
 body, button, input, select, table, textarea{direction: ltr;}
 caption, th, td{text-align: left;}
 input[type="checkbox"], input[type="radio"]{float: left;}
-html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.nav-primary a,#search,.skip-cart .count,.header-minicart .block-subtitle,.cart-menu .subtotal,.footer,  .footer button {font-family: "Lato", sans-serif;}
+html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.nav-primary a,#search,.skip-cart .count,.header-minicart .block-subtitle,.cart-menu .subtotal,.footer,  .footer button {font-family: "Ubuntu", sans-serif;}
 .left {float: right;}
 .right {float: left;}
 .sidebar{padding-right: 35px;padding-left: 0;float: left;}
@@ -16,11 +16,18 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .dashboard .box-head h2{margin-left: 0;margin-right: 20px;}
 .product-shop .product-name{text-align: left;}
 .product-options dl.attr-2 dd.last{float: right;}
-.product-options select{padding-left: 0;padding-right: 6px;}
+.product-options select{    padding-left: 10px;padding-right: 6px;background-position: right 7px top 15px;}
 .mobile_cart, .cart-mo-item{direction: ltr;}
 .mobile_cart .product-cart-image{float: left;}
 .mobile_cart .cart-content{float: right;}
-.mobile_cart .cart-content .product-name{text-align: left;}
+.mobile_cart .cart-content .product-name,.product-shop .name-price{text-align: left;}
+.product-view .tabs .ui-accordion h3{    background-position: 0 7px;padding-right: 0;padding-left: 30px;}
+.ui-accordion .ui-accordion-header .ui-accordion-header-icon{left: auto;right: .5em;}
+.product-view .ui-accordion .ui-accordion-content{padding: 0 0 20px 30px}
+.qty-block .btn-wrap{width: 25%;}
+.qty-block .num{width: 50%;}
+.qty-block .qty-num{padding-right: 0;padding-left: 8px;float: left;    text-align: left;}
+.product-shop .add-to-cart .qty-block .num span{top: 12px;    right: auto;left: 40%;}
 .mobile_cart .cart-content .item-options{direction: ltr;}
 .item-options dt,.item-options dd{float: left;}
 .mobile_cart .cart-content .cart-content-price,.mobile_cart .cart-content .item-m-product-wish,.mobile_cart .cart-content .product-m-cart-remove{left: auto;right: 0;}
@@ -40,15 +47,19 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .opc-wrapper-opc label{text-align: left;}
 .opc-wrapper-opc .payment-block dt input{margin: 4px 7px 0 0!important;}
 .opc-wrapper-opc .payment-block dt label{    text-align: left;}
-.form-language{float: right;}
 #search_mini_form .search-button{right: 5px;left: auto;}
 #search{padding-left: 15px;padding-right: 0;}
 .page-header-container .phone{background-position: 160px -2px;text-align: right;padding-right: 40px;}
 .header-minicart:after{right: -1px;left:auto;}
 .skip-cart .count{left: 5px;right: auto;}
-.skip-link .icon{width: 25px;height: 32px;}
-.skip-search .icon{    width: 35px;height: 36px;}
-.header-minicart .block-subtitle .close{left: 0;right:auto;}
+.account-link{    margin-right: 0;margin-left: 0;}
+div.phone-top a{margin-right: 0;margin-left: 10px;}
+.nav-search-desk form{left: auto;right: 0;}
+.nav-search-desk #search_mini_form .search-button{right: 10px;left: auto;}
+.how-works .item:after{background: url(../images/how-works-arrow-en.png) 0 0 no-repeat;left: auto;right: -30px;}
+div.phone-top a{padding-bottom: 10px;}
+.toolbar-top .pager{    float: left;}
+.sorter{float: right;}
 .home-static-block .home-static1{padding-left: 0;padding-right: 10px;}
 .home-static-block .home-static2{padding: 0;padding-right: 7px;}
 .home-search .home-form{right: 0;}
@@ -60,13 +71,18 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .footer .f-column h3{text-align: left;}
 .footer .f-column .follow li{margin-left: 0;margin-right: 15px;}
 .footer .f-column .app li{margin-left: 0;margin-right: 20px;}
-.cart-forms, .cart-totals-wrapper{float: right;clear: right;padding-right: 0;padding-left: 40px;}
+.discount-form label:after{left: auto;right: 0;}
+.cart .title a{    margin-right: 0;    margin-left: 20px;width: 200px;}
+.cart .title a:before{    right: auto;left: -12px;}
+.md-modal-header .close{left: auto;right: 10px;}
 .box-up-sell h2.title,.cart-table .product-name,.product-cart-info .edit a,.cart-table thead th,.cart-table tbody td{text-align: left;}
 .cart-table{float: left;}
 .cart .discount input.input-text{padding-left: 10px;}
 .checkout-types button.button span span{background-position: 0 center;}
 #header-cart.skip-active:before{left: 30px;    right: auto;}
-.header-minicart .mini-products-list li .product-details {position: relative;float: left;margin-right: 0;margin-left: 10px;}
+.header-minicart .mini-products-list li .product-details {    position: relative;float: left;margin-right: 0;margin-left: 0;text-align: left;padding-left: 10px;}
+.cart-left{float: right;clear: right;    padding-right: 0;padding-left: 40px;}
+.cart-left-block{float: right;width: 100%;}
 .header-minicart .mini-products-list li .product-image{float: left;}
 .checkout_logo .need-help{    right: 0;left: auto;}
 .checkout_logo .need-help a{padding-left: 0;background-position: right 0;padding-right: 30px;}
@@ -79,19 +95,17 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .form-list .control div.input-box, .sp-methods dt div.input-box, #checkout-shipping-method-load .sp-methods dd div.input-box, #co-shipping-method-form .sp-methods dd div.input-box, .product-options ul.options-list div.input-box{    float: left;}
 .opc-wrapper-opc .opc-col-left{    padding-left: 0;padding-right: 20px;    float: left;}
 .opc-wrapper-opc .opc-col-center{float: left;}
-.opc-wrapper-opc .opc-col-right{float: left;padding-left: 20px;padding-right: 0;}
-.opc-wrapper-opc #co-billing-form h3:before,.opc-wrapper-opc .shipping-block h3:before,.opc-wrapper-opc .payment-block h3:before{margin-left: 0;margin-right: 10px;}
+.header-ab .page-header-container div.phone-top a{    background-position: right;padding-left: 5px;padding-right: 40px;}
+/*.opc-wrapper-opc .opc-col-right{float: left;padding-left: 20px;padding-right: 0;}
+.opc-wrapper-opc #co-billing-form h3:before,.opc-wrapper-opc .shipping-block h3:before,.opc-wrapper-opc .payment-block h3:before{margin-left: 0;margin-right: 10px;}*/
 #header-cart .remove{left: auto;right: 0;}
 .opc-wrapper-opc .opc-col-left li.fields .field:nth-child(2),.opc-wrapper-opc .opc-col-left li.fields .field:nth-child(3){float:right;}
-.account-login .col2-set .registered-users {
-    padding-left: 0;
-    padding-right: 65px;
-    float: left;
-}
-.account-login .col2-set .new-users {
-    padding-right: 0;
-    padding-left: 50px;
-}
+.opc-wrapper-opc .opc-col-left li.fields .field.telephone{float:left;}
+.opc-review-block .review-td{float: left;}
+.opc-review-block .review-td .product-image{float: left;}
+.opc-wrapper-opc p{text-align: left;}
+.opc-review-actions h5 span{float: right;}
+.how-works .item{float: left;}
 .account-login .col2-set img {
     right: -30px;
     left: auto;
@@ -107,7 +121,9 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
     right: 0;
     left: auto;
 }
-.block-layered-nav input[type="checkbox"]{margin: 6px 5px 0 0;}
+.col2-right-layout .col-main.cms-main{padding-right: 80px;padding-left: 50px;}
+.block-layered-nav dd li input[type="checkbox"]{margin: 6px 5px 0 0;}
+.cat-top .category-description{    text-align: left;}
 .pages ol li,.pages ol{float: left;}
 .pager li:first-child a, .pager li.current:first-child {border-right: none;}
 .pager li:last-child a, .pager li.current:last-child {border-right: 1px solid #d5d5d5;}
@@ -123,9 +139,11 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .swatch-actions .amconf-image-container{float: left;margin-left: 0;margin-right:4px;}
 .amconf-image-container{margin-left: 0;margin-right: 15px;}
 .item .actions .tool{left: -64px;right: auto;min-width: 155px;}
-.main-image{float: right!important;}
+.product-shop.main {padding-left: 15px;padding-right: 150px;}
 .product-options dt{direction: ltr;}
-.product-shop .price,.product-shop .price-box .old-price{margin-left: 0;}
+.product-shop .price,.product-shop .price-box .old-price{    margin-left: 5px;margin-right: 0;}
+.product-shop .description{text-align: left;}
+.product-options{text-align: left;}
 .product-shop .add-to-cart{float: left;padding: 0 15px 0 0;}
 .product-shop .action{margin-top: 65px;}
 .add-to-cart .qty-wrapper{direction: ltr;}
@@ -141,6 +159,9 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .product-shop{padding-left: 30px;padding-right: 0;}
 .page_blog_post_view .home-block{text-align: left!important;}
 .guide-box .button{margin-right: 0;float: left;margin-left: 20px;}
+.right-top{text-align: left;}
+.right-top span {margin-left: 0;margin-right: 30px;}
+.header-right{    float: right!important;text-align: right;}
 @media (max-width: 1440px){
 	.topSearch{padding-right: 10px;}
 	.nav-primary a.level0{padding: 0 8px 10px;}
@@ -163,9 +184,11 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 	.product-tabs li#product_tabs_shipping_details{width: 33%;}
 	.product-tabs li#product_tabs_contact{width: 25%;}
 }
+@media (max-width: 991px) and (min-width: 768px){
+	.how-works .item:after{right: 40px;}
+}
 @media (max-width: 991px){
 	#header-nav{left: auto;right: 0;}
-	.nav-primary a.level0{text-align: left;}
 	.nav-primary li.parent > a:after,.nav-primary li.parent.sub-menu-active > a:after, .nav-primary li.parent.menu-active > a:after{left: auto;right: 27px;}
 	.nav-primary a.level0{padding: 6px 8px 6px;}
 	.nav-primary li.level0 li{padding:0;}
@@ -175,6 +198,7 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 	.block.block-account{padding-left: 15px;}
 	.contacts .openH{    margin-left: 0;}
 	.product-shop{padding-right: 15px;padding-left: 15px;margin-top: 30px;}
+	.cms-page-view .col2-right-layout .col-main, .contacts-index-index .col2-right-layout .col-main{padding: 0 15px;margin-top: 0;}
 }
 @media (max-width: 767px){
 	.footer .f-column.last{width: 100%;}
@@ -184,12 +208,20 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 	.search-phone{padding-right: 5px;}
 	.account-cart-wrapper {margin-top: 15px;padding-right: 0;padding-left: 5px;}
 	.skip-search .icon{width: 35px;height: 36px;}
-	.skip-cart .icon{width: 35px;height: 32px;}
 	.skip-cart .count{left: 0;}
 	.account-login .col2-set .registered-users {padding-left: 15px;padding-right: 0;float: none;width: 100%;}
 	.account-login .col2-set .new-users {padding-right: 0;padding-left: 15px;}
 	.more-images{padding-right: 15px;padding-left: 0;}
 	.product-tabs li ,.product-tabs li#product_tabs_shipping_details{width: 100%;margin-bottom: 10px;}
+	.header-left{float: right!important;}
+	.header-right{    float: left!important;text-align: left;}
+	#header-nav{right: auto;}
+	.nav-search #search_mini_form .search-button{left: auto;right: 10px;}
+	.how-works .item:after{    background-size: 45px;    right: -25px;}
+	.how-works .item.first:after{right: -40px;left: auto;}
+	.how-works .item.third:after {right: auto;left: 0px;}
+	.how-works .text .subTitle{font-size: 14px;}
+	.how-works .item.fours:after {left: -18px;right: auto;display: block;}
 }
 	#header-cart.skip-active{left: 0;right:auto;}
 	#header-account.skip-active{left: 0;right:auto;}
